syntax = "proto3";
package mvccpb;

option java_package = "io.korandoru.zeronos.proto";
option java_multiple_files = true;
option java_outer_classname = 'MvccProtos';
option java_generate_equals_and_hash = true;

message KeyValue {
  // key is the key in bytes. An empty key is not allowed.
  bytes key = 1;
  // create_revision is the revision of last creation on this key.
  int64 create_revision = 2;
  // modify_revision is the revision of last modification on this key.
  int64 modify_revision = 3;
  // version is the version of the key. A deletion resets
  // the version to zero and any modification of the key
  // increases its version.
  int64 version = 4;
  // value is the value held by the key, in bytes.
  bytes value = 5;
}
